test_suite5/ALAN/test_suite/alan-2022-examples/failing/004860_mutation.alan
source g begin leave c / relax S8 end
